src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AAFP_ID__c</fullName>
        <description>Note this field already exists in AAFP orgs</description>
        <label>AAFP ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Medical_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Medical License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_practicing_family_medicine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you practicing family medicine?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Chapter_To__c</fullName>
        <description>To be entered by AAFP Staff. Used to send a report to Chapters.</description>
        <label>Change Chapter To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Change_Active_Military__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter Change Active Military</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Change_Days_Out_of_Compliance__c</fullName>
        <description>Formula: TODAY() – [Chapter Change Needed Date] to generate the days out of compliance (used in reporting)</description>
        <formula>IF(NOT(ISNULL(Chapter_Change_Needed_Date__c)), 
    TODAY() - Chapter_Change_Needed_Date__c, 
    null
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Change Days Out of Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Change_Medical_License__c</fullName>
        <description>Not required because change request may be separate from doc gathering Doc 1 BR 489/AD-1517</description>
        <label>Chapter Change Medical License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Change_Needed_Date__c</fullName>
        <label>Chapter Change Needed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Change_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter Change Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Change_Outside_US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not required because change request may be separate from doc gathering Doc 1 BR 489/AD-1517</description>
        <label>Chapter Change Outside US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Membership_Status__c</fullName>
        <label>Current Membership Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled for Dues</fullName>
                </value>
                <value>
                    <fullName>Cancelled for Dues + CME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRCTS__Directory_Preferences__c</fullName>
        <description>The JSON is used to hide the fields on the directory detail view.</description>
        <inlineHelpText>The JSON is used to hide the fields on the directory detail view.</inlineHelpText>
        <label>Directory Preferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DonorApi__Active_Recurring_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated Field** Indicates wether this contact has an active recurring gift opportunity.</description>
        <inlineHelpText>**System Calculated Field** Indicates wether this contact has an active recurring gift opportunity.</inlineHelpText>
        <label>Active Recurring Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Auto_Calculate_Contact_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s personal greeting, personal recognition name, and formal greeting with the system default format. Personal = FirstName, Personal Recognition Name = Salutation FirstName LastName, Formal Greeting = Personal Recognition Name</description>
        <inlineHelpText>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s personal greeting, personal recognition name, and formal greeting with the system default formats.</inlineHelpText>
        <label>Auto Calculate Contact Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Auto_Calculate_Current_Ask_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s current ask amount with the amount of the contact&apos;s last gift if the last gift amount is greater than 0.</description>
        <inlineHelpText>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s current ask amount with the amount of the contact&apos;s last gift if the last gift amount is greater than 0.</inlineHelpText>
        <label>Auto Calculate Current Ask Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Current_Ask_Amount__c</fullName>
        <description>What is the target current ask amount for this person?</description>
        <inlineHelpText>What is the target current ask amount for this person?</inlineHelpText>
        <label>Current Ask Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if the contact is deceased</description>
        <inlineHelpText>check if the contact is deceased</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Default_Greeting_Type__c</fullName>
        <description>*DO NOT CHANGE*</description>
        <inlineHelpText>*DO NOT CHANGE*</inlineHelpText>
        <label>Default Greeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Greeting</fullName>
                    <default>true</default>
                    <label>Personal Greeting</label>
                </value>
                <value>
                    <fullName>Formal Greeting</fullName>
                </value>
                <value>
                    <fullName>Personal Recognition Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Default_Greeting__c</fullName>
        <formula>IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Personal Greeting&quot;), DonorApi__Personal_Greeting__c,
IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Personal Recognition Name&quot;), DonorApi__Personal_Recognition_Name__c,
IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Formal Greeting&quot;), DonorApi__Formal_Greeting__c,DonorApi__Personal_Greeting__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Direct_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude this contact from all direct mail campaigns.</description>
        <inlineHelpText>Exclude this contact from all direct mail campaigns.</inlineHelpText>
        <label>Direct Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not solicit this contact. By default when flagged the contact will be excluded from all campaigns.</description>
        <inlineHelpText>Do not solicit this contact. By default when flagged the contact will be excluded from all campaigns.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__First_Gift_Date__c</fullName>
        <description>**System Calculated Field** Calculates the first gift received date for all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the first gift received date for all related gifts.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Formal_Greeting__c</fullName>
        <description>Formal Greeting for the contact</description>
        <inlineHelpText>Formal Greeting for the contact</inlineHelpText>
        <label>Formal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated Field** Counts the total number of related gift opportunities (Sales Orders with type &quot;Gift Opportunity&quot;) -- for the contact.</description>
        <inlineHelpText>**System Calculated Field** Counts the total number of related gift opportunities (Sales Orders with type &quot;Gift Opportunity&quot;) -- for the contact.</inlineHelpText>
        <label>Gift Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated Field** Sum of the balance due for all outstanding pledges.</description>
        <inlineHelpText>**System Calculated Field** Sum of the balance due for all outstanding pledges.</inlineHelpText>
        <label>Gifts Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated Field** Sum of hard credits.</description>
        <inlineHelpText>**System Calculated Field** Sum of hard credits.</inlineHelpText>
        <label>Gifts Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Value__c</fullName>
        <formula>DonorApi__Gifts_Outstanding__c + DonorApi__Gifts_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Include_in_Household_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the contact will be included on all household greetings. This flag will automatically populate to true if the contact is the primary contact on a related account.</description>
        <inlineHelpText>If set to true, the contact will be included on all household greetings. This flag will automatically populate to true if the contact is the primary contact on a related account.</inlineHelpText>
        <label>Include in Household Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Languages__c</fullName>
        <description>Languages that the contact can speak.</description>
        <inlineHelpText>Languages that the contact can speak.</inlineHelpText>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Largest_Gift__c</fullName>
        <description>**System Calculated Field** Calculates the largest gift amount for all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the largest gift amount for all related gifts.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated Field** Calculates the amount of the last gift received from the related contact.</description>
        <inlineHelpText>**System Calculated Field** Calculates the amount of the last gift received from the related contact.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Date__c</fullName>
        <description>**System Calculated Field** Calculates the last gift date for all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the last gift date for all related gifts.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Personal_Greeting__c</fullName>
        <description>Personal greeting to be used for communications and solicitations to the contact.</description>
        <inlineHelpText>Personal greeting to be used for communications and solicitations to the contact.</inlineHelpText>
        <label>Personal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Personal_Recognition_Name__c</fullName>
        <description>If this person gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</description>
        <inlineHelpText>If this person gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</inlineHelpText>
        <label>Personal Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Primary_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the person who is responsible for owning this relationship with this constituent. This will create a new record in this contacts relationship related list.</description>
        <inlineHelpText>Select the person who is responsible for owning this relationship with this constituent. This will create a new record in this contacts relationship related list.</inlineHelpText>
        <label>Primary Relationship Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Manager (Contacts)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates wether this contact is the primary contact for the related account.</description>
        <inlineHelpText>Indicates wether this contact is the primary contact for the related account.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Spouse)</relationshipLabel>
        <relationshipName>Spouse_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Suffix__c</fullName>
        <description>List of common academic, honorary, professional, and generational suffixes.</description>
        <inlineHelpText>List of common academic, honorary, professional, and generational suffixes.</inlineHelpText>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>D.D.S.</fullName>
                </value>
                <value>
                    <fullName>D.M.D.</fullName>
                </value>
                <value>
                    <fullName>D.V.M.</fullName>
                </value>
                <value>
                    <fullName>Ed.D.</fullName>
                </value>
                <value>
                    <fullName>Esq.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>M.D.</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
                <value>
                    <fullName>R.N.</fullName>
                </value>
                <value>
                    <fullName>R.N.C.</fullName>
                </value>
                <value>
                    <fullName>Ret.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>USAF</fullName>
                </value>
                <value>
                    <fullName>USAFR</fullName>
                </value>
                <value>
                    <fullName>USAR</fullName>
                </value>
                <value>
                    <fullName>USCG</fullName>
                </value>
                <value>
                    <fullName>USMC</fullName>
                </value>
                <value>
                    <fullName>USMCR</fullName>
                </value>
                <value>
                    <fullName>USN</fullName>
                </value>
                <value>
                    <fullName>USNR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dues_Paid_by_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by current Active Membership record; used for faster MSO reference and filtering for invoice payment.. This field is used in the solution for requirement BR</description>
        <label>Dues Paid by Chapter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dues_Paid_by_Residency_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by current Active Membership record; used for faster MSO reference and filtering for invoice payment. This field is used in the solution for requirement BR 538 / AD-1552 (See Design Doc 2)</description>
        <label>Dues Paid by Residency Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by regular process (see Design Doc 2, BR 181/AD-188)</description>
        <label>Eligible for Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontevaReports__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaReports__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduating_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by regular process (see Design Doc 2, BR 180/AD-187)
Fields and/or Badges can be used for Pricing Attributes.</description>
        <label>Graduating Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <description>Physician&apos;s graduation date</description>
        <inlineHelpText>Physician&apos;s graduation date</inlineHelpText>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Country__c</fullName>
        <label>License Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Issuance_Date__c</fullName>
        <label>License Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Chapter__c</fullName>
        <label>Local Chapter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VA Northern Virginia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_School__c</fullName>
        <label>Medical School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albany Medical College</fullName>
                </value>
                <value>
                    <fullName>Albert Einstein College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Baylor College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Boston University School of Medicine</fullName>
                </value>
                <value>
                    <fullName>Brody School of Medicine at East Carolina University</fullName>
                </value>
                <value>
                    <fullName>CUNY School of Medicine</fullName>
                </value>
                <value>
                    <fullName>California Northstate University College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Case Western Reserve University School of Medicine</fullName>
                </value>
                <value>
                    <fullName>Central Michigan University College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Charles E. Schmidt College of Medicine at Florida Atlantic University</fullName>
                </value>
                <value>
                    <fullName>Chicago Medical School at Rosalind Franklin University of Medicine &amp; Science</fullName>
                </value>
                <value>
                    <fullName>Columbia University Vagelos College of Physicians and Surgeons</fullName>
                </value>
                <value>
                    <fullName>Cooper Medical School of Rowan University</fullName>
                </value>
                <value>
                    <fullName>Creighton University School of Medicine</fullName>
                </value>
                <value>
                    <fullName>Donald and Barbara Zucker School of Medicine at Hofstra/Northwell</fullName>
                </value>
                <value>
                    <fullName>Drexel University College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Duke University School of Medicine</fullName>
                </value>
                <value>
                    <fullName>East Tennessee State University James H. Quillen College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Eastern Virginia Medical School</fullName>
                </value>
                <value>
                    <fullName>Emory University School of Medicine</fullName>
                </value>
                <value>
                    <fullName>Florida International University Herbert Wertheim College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Florida State University College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Frank H. Netter MD School of Medicine at Quinnipiac University</fullName>
                </value>
                <value>
                    <fullName>Geisel School of Medicine at Dartmouth</fullName>
                </value>
                <value>
                    <fullName>Geisinger Commonwealth School of Medicine</fullName>
                </value>
                <value>
                    <fullName>George Washington University School of Medicine and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Georgetown University School of Medicine</fullName>
                </value>
                <value>
                    <fullName>Harvard Medical School</fullName>
                </value>
                <value>
                    <fullName>Howard University College of Medicine</fullName>
                </value>
                <value>
                    <fullName>Icahn School of Medicine at Mount Sinai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Activation_Date__c</fullName>
        <label>Membership Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Reinstatement_Date__c</fullName>
        <label>Membership Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Termination_Date__c</fullName>
        <label>Membership Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by regular process (see Design Doc 2, BR 571/AD-1582)
Fields and/or Badges can be used for Pricing Attributes.</description>
        <label>New Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Year_as_Resident_Member__c</fullName>
        <label>Number of Year as Resident Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Annual_Engagement_Score__c</fullName>
        <description>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records for the current year.</description>
        <inlineHelpText>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records for the current year.</inlineHelpText>
        <label>Annual Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assistant_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Assistant Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Assistant Phone.</inlineHelpText>
        <label>Assistant Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assistant_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Contact&apos;s Assistant will not receive email communications.</description>
        <inlineHelpText>The Contact&apos;s Assistant will not receive email communications.</inlineHelpText>
        <label>Assistant Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assistant_Email__c</fullName>
        <description>The Contact&apos;s Assistant Email address.</description>
        <inlineHelpText>The Contact&apos;s Assistant Email address.</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badges__c</fullName>
        <description>This field lists all the active badges in alphabetical order including all badges inherited from it&apos;s parent account or it&apos;s parent account through flowdown (when enabled)</description>
        <inlineHelpText>This field lists all the active badges in alphabetical order including all badges inherited from it&apos;s parent account or it&apos;s parent account through flowdown (when enabled)</inlineHelpText>
        <label>Badges</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Home_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Home Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Home Phone.</inlineHelpText>
        <label>Home Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Primary_Contact__c</fullName>
        <formula>Id == Account.OrderApi__Primary_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Lifetime_Engagement_Score__c</fullName>
        <description>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records.</description>
        <inlineHelpText>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records.</inlineHelpText>
        <label>Lifetime Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mobile_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Mobile Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Mobile Phone.</inlineHelpText>
        <label>Mobile Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Other_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Other Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Other Phone.</inlineHelpText>
        <label>Other Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Other_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact will not receive communications to their Other Email.</description>
        <inlineHelpText>Contact will not receive communications to their Other Email.</inlineHelpText>
        <label>Other Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Other_Email__c</fullName>
        <description>Other/Additional Email for the Contact.</description>
        <inlineHelpText>Other/Additional Email for the Contact.</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Outstanding_Credits__c</fullName>
        <description>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</description>
        <inlineHelpText>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</inlineHelpText>
        <label>Outstanding Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Personal_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact will not receive communications to their Personal Email.</description>
        <inlineHelpText>Contact will not receive communications to their Personal Email.</inlineHelpText>
        <label>Personal Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Personal_Email__c</fullName>
        <description>Personal/Home Email address for the Contact.</description>
        <inlineHelpText>Personal/Home Email address for the Contact.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Potential_Duplicate_Contacts__c</fullName>
        <label>Potential Duplicate Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>